# elf2dfuse

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  apt.Debian  apt.MinGW
cmake/: any_toolchain.cmake  version.cmake  x86_64-linux-gnu.cmake
src/: elf2dfuse.c
